add xirsys call

--- a/app/views/visitors/index.html.erb
+++ b/app/views/visitors/index.html.erb
@@ -3,10 +3,33 @@
     // Compatibility shim
     navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
 
+    // Call XirSys servers
+    $.ajax({
+      type: "POST",
+      dataType: "json",
+      url: "https://api.xirsys.com/getIceServers",
+      data: {
+        ident: "< Your username >",
+        secret: "< Your secret API token >",
+        domain: "< www.yourdomain.com >",
+        application: "default",
+        room: room,
+        secure: 1
+      },
+      success: function (data, status) {
+        // data.d is where the iceServers object lives
+        peerConnectionConfig = data.d;
+        console.log(peerConnectionConfig);
+      },
+      async: false
+    });
+  
     // PeerJS object
-    var peer = new Peer({ key: 'lwjd5qra8257b9', debug: 3, config: {'iceServers': [
-      { url: 'stun:stun.l.google.com:19302' } // Pass in optional STUN and TURN server for maximum network compatibility
-    ]}});
+    var peer = new Peer({
+      key: 'lwjd5qra8257b9',
+      debug: 3,
+      peerConnectionConfig
+    });
 
     peer.on('open', function(){
       $('#my-id').text(peer.id);
